add twitter support

--- a/public/r-notebook/index.html
+++ b/public/r-notebook/index.html
@@ -148,7 +148,7 @@ R for data analysis and multimarkdown and LaTeX formulas for explanation.</p>
     
       <div class="sharing">
   
-  <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://www.tomtorsneyweir.com/r-notebook/" data-via="" data-counturl="http://www.tomtorsneyweir.com/r-notebook/" >Tweet</a>
+  <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://www.tomtorsneyweir.com/r-notebook/" data-via="gabysbrain" data-counturl="http://www.tomtorsneyweir.com/r-notebook/" >Tweet</a>
   
   
   
@@ -179,6 +179,22 @@ R for data analysis and multimarkdown and LaTeX formulas for explanation.</p>
   </ul>
 </section>
 
+
+<section>
+  <h1>Latest Tweets</h1>
+  <ul id="tweets">
+    <li class="loading">Status updating...</li>
+  </ul>
+  <script type="text/javascript">
+    $.domReady(function(){
+      getTwitterFeed("gabysbrain", 4, false);
+    });
+  </script>
+  <script src="/javascripts/twitter.js" type="text/javascript"> </script>
+  
+    <a href="http://twitter.com/gabysbrain" class="twitter-follow-button" data-show-count="false">Follow @gabysbrain</a>
+  
+</section>
 
 
 
