--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,22 @@ modeling in order to perform optimization in high-dimensional spaces.</p>
 </section>
 
 
+<section>
+  <h1>Latest Tweets</h1>
+  <ul id="tweets">
+    <li class="loading">Status updating...</li>
+  </ul>
+  <script type="text/javascript">
+    $.domReady(function(){
+      getTwitterFeed("gabysbrain", 4, false);
+    });
+  </script>
+  <script src="/javascripts/twitter.js" type="text/javascript"> </script>
+  
+    <a href="http://twitter.com/gabysbrain" class="twitter-follow-button" data-show-count="false">Follow @gabysbrain</a>
+  
+</section>
+
 
 
 
