--- a/public/reproducable-research/index.html
+++ b/public/reproducable-research/index.html
@@ -242,7 +242,7 @@ each week and my supervisor is happy that I can show what I&#8217;ve done!</p></
     
       <div class="sharing">
   
-  <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://www.tomtorsneyweir.com/reproducable-research/" data-via="" data-counturl="http://www.tomtorsneyweir.com/reproducable-research/" >Tweet</a>
+  <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://www.tomtorsneyweir.com/reproducable-research/" data-via="gabysbrain" data-counturl="http://www.tomtorsneyweir.com/reproducable-research/" >Tweet</a>
   
   
   
@@ -279,6 +279,22 @@ each week and my supervisor is happy that I can show what I&#8217;ve done!</p></
   </ul>
 </section>
 
+
+<section>
+  <h1>Latest Tweets</h1>
+  <ul id="tweets">
+    <li class="loading">Status updating...</li>
+  </ul>
+  <script type="text/javascript">
+    $.domReady(function(){
+      getTwitterFeed("gabysbrain", 4, false);
+    });
+  </script>
+  <script src="/javascripts/twitter.js" type="text/javascript"> </script>
+  
+    <a href="http://twitter.com/gabysbrain" class="twitter-follow-button" data-show-count="false">Follow @gabysbrain</a>
+  
+</section>
 
 
 
