--- a/website/site/index.html
+++ b/website/site/index.html
@@ -2,64 +2,67 @@
 title: Home
 ---
 
-<aside class="one-third column info-blurb" style="background-color: #2b2b2b; color: white;">
-  <div class="headshot" style="align: center;">
-    <img src="/images/headshot.jpg" />
+<div class="columns">
+  <aside class="info-blurb" style="background-color: #2b2b2b; color: white;">
+    <div class="headshot" style="align: center;">
+      <img src="/images/headshot.jpg" />
+    </div>
+
+    <h1>University of Vienna</h1>
+    <h2>VDA research group</h2>
+
+    <ul class="address">
+      <li>VDA research group</li>
+      <li>Faculty of Computer Science</li>
+      <li>University of Vienna</li>
+      <li>Sensengasse 6/2.07</li>
+      <li>1090 Vienna, Austria</li>
+    </ul>
+
+    <ul class="social-links">
+      <li>
+        <a href="mailto:thomas.torsney-weir@univie.ac.at" 
+           style="background: #f67f00;">
+          <i class="far fa-envelope"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://twitter.com/gabysbrain" style="background: #32ccfe;">
+          <i class="fab fa-twitter"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/gabysbrain" style="background: #000000;">
+          <i class="fab fa-github-alt"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#" style="background: #0085ae;">
+          <i class="fab fa-linked-in"></i>
+        </a>
+      </li>
+      <li>
+        <a href="#" style="background: red;">
+          <i class="fas fa-unlink"></i>
+        </a>
+      </li>
+    </ul>
+  </aside>
+
+  <div class="content">
+
+    <h2>Welcome</h2>
+
+    <p>
+      I am currently a PhD student with the Visualization and data analysis
+      group at the University of Vienna. My research interests are ...
+    </p>
+
+    <h2>News</h2>
+
+    <p>Recent blog posts and publications here?</p>
+
   </div>
-
-  <h1>University of Vienna</h1>
-  <h2>VDA research group</h2>
-
-  <ul class="address">
-    <li>VDA research group</li>
-    <li>Faculty of Computer Science</li>
-    <li>University of Vienna</li>
-    <li>Sensengasse 6/2.07</li>
-    <li>1090 Vienna, Austria</li>
-  </ul>
-
-  <ul class="social-links">
-    <li>
-      <a href="mailto:thomas.torsney-weir@univie.ac.at" 
-         style="background: #f67f00;">
-        <i class="far fa-envelope"></i>
-      </a>
-    </li>
-    <li>
-      <a href="https://twitter.com/gabysbrain" style="background: #32ccfe;">
-        <i class="fab fa-twitter"></i>
-      </a>
-    </li>
-    <li>
-      <a href="https://github.com/gabysbrain" style="background: #000000;">
-        <i class="fab fa-github-alt"></i>
-      </a>
-    </li>
-    <li>
-      <a href="#" style="background: #0085ae;">
-        <i class="fab fa-linked-in"></i>
-      </a>
-    </li>
-    <li>
-      <a href="#" style="background: red;">
-        <i class="fas fa-unlink"></i>
-      </a>
-    </li>
-  </ul>
-</aside>
-
-<div class="two-thirds column content">
-
-  <h2>Welcome</h2>
-
-  <p>
-    I am currently a PhD student with the Visualization and data analysis
-    group at the University of Vienna. My research interests are ...
-  </p>
-
-  <h2>News</h2>
-
-  <p>Recent blog posts and publications here?</p>
 
 </div>
 
