--- a/website/site/index.html
+++ b/website/site/index.html
@@ -2,14 +2,14 @@
 title: Home
 ---
 
-<div class="columns">
-  <aside class="info-blurb" style="background-color: #2b2b2b; color: white;">
-    <div class="headshot" style="align: center;">
+<div class="columns" style="margin-top: -2rem;">
+  <aside class="info-blurb">
+    <div class="headshot">
       <img src="/images/headshot.jpg" />
     </div>
 
-    <h1>University of Vienna</h1>
-    <h2>VDA research group</h2>
+    <h1>VDA research group</h1>
+    <h2>University of Vienna</h2>
 
     <ul class="address">
       <li>VDA research group</li>
@@ -38,12 +38,13 @@ title: Home
       </li>
       <li>
         <a href="#" style="background: #0085ae;">
-          <i class="fab fa-linked-in"></i>
+          <i class="fab fa-linkedin-in"></i>
         </a>
       </li>
       <li>
-        <a href="#" style="background: red;">
-          <i class="fas fa-unlink"></i>
+        <a href="#" style="background: #0cb;">
+          <!--<i class="fas fa-unlink"></i>-->
+          R<sup>G</sup>
         </a>
       </li>
     </ul>
