--- a/website/site/index.html
+++ b/website/site/index.html
@@ -56,7 +56,11 @@ title: Home
 
     <p>
       I am currently a PhD student with the Visualization and data analysis
-      group at the University of Vienna. My research interests are ...
+      group at the University of Vienna. My primary research interest is
+      using visualization to understand multi-dimensional spaces. I also
+      dabble in machine learning and functional programming. I am particularly
+      a fan of the <a href="https://www.haskell.org">Haskell</a> and 
+      <a href="http://www.purescript.org">Purescript</a> languages.
     </p>
 
     <h2>News</h2>
