--- a/site/talks/2018-06-06_hypersliceplorer_eurovis.html
+++ b/site/talks/2018-06-06_hypersliceplorer_eurovis.html
@@ -17,6 +17,14 @@
 </style>
 		<!--<link rel="stylesheet" href="css/reveal.css">-->
 		<!--<link rel="stylesheet" href="css/theme/white.css">-->
+  <!-- Printing and PDF exports -->
+  <script>
+      var link = document.createElement( 'link' );
+      link.rel = 'stylesheet';
+      link.type = 'text/css';
+      link.href = window.location.search.match( /print-pdf/gi ) ? '/css/pdf.css' : '/css/paper.css';
+      document.getElementsByTagName( 'head' )[0].appendChild( link );
+  </script>
 	</head>
 	<body>
 <div class="theme-font-montserrat theme-color-white-blue" style="width: 100%; height: 100%;">
