--- a/site/index.html
+++ b/site/index.html
@@ -50,7 +50,8 @@ title: Home
     <h2>Welcome</h2>
 
     <p>
-      I am currently a PhD student with the Visualization and data analysis
+      I am currently a postdoctoral researcher with the Visualization and 
+      data analysis
       group at the University of Vienna. My primary research interest is
       using visualization to understand multi-dimensional spaces. I also
       dabble in machine learning and functional programming. I am particularly
