info on swansea post

--- a/site/index.html
+++ b/site/index.html
@@ -8,20 +8,21 @@ title: Home
       <img src="/images/headshot.jpg" />
     </div>
 
-    <h1>VDA research group</h1>
-    <h2>University of Vienna</h2>
+    <h1>Swansea University</h1>
+    <h2>Computer Science</h2>
 
     <ul class="address">
-      <li>VDA research group</li>
-      <li>Faculty of Computer Science</li>
-      <li>University of Vienna</li>
-      <li>Sensengasse 6/2.06</li>
-      <li>1090 Vienna, Austria</li>
+      <li>Office 416</li>
+      <li>Computational Foundry</li>
+      <li>Swansea University --- Bay Campus</li>
+      <li>Swansea</li>
+      <li>SA1 8EN</li>
+      <li>UK</li>
     </ul>
 
     <ul class="social-links">
       <li>
-        <a href="mailto:thomas.torsney-weir@univie.ac.at" 
+        <a href="mailto:t.d.torsney-weir@swansea.ac.uk" 
            style="background: #f67f00;">
           <i class="far fa-envelope"></i>
         </a>
@@ -50,9 +51,8 @@ title: Home
     <h2>Welcome</h2>
 
     <p>
-      I am currently a postdoctoral researcher with the Visualization and 
-      data analysis
-      group at the University of Vienna. My primary research interest is
+      I am currently a Lecturer at Swansea University.
+      My primary research interest is
       using visualization to understand multi-dimensional spaces. I also
       dabble in machine learning and functional programming. I am particularly
       a fan of the <a href="https://www.haskell.org">Haskell</a> and 
