--- a/site/index.html
+++ b/site/index.html
@@ -33,7 +33,7 @@ title: Home
         </a>
       </li>
       <li>
-        <a href="#" style="background: #0085ae;">
+        <a href="https://www.linkedin.com/in/torsneyt" style="background: #0085ae;">
           <i class="fab fa-linkedin-in"></i>
         </a>
       </li>
