update fontawesome and use new researchgate icon and add orcid id

--- a/site/index.html
+++ b/site/index.html
@@ -38,9 +38,14 @@ title: Home
         </a>
       </li>
       <li>
-        <a href="#" style="background: #0cb;">
-          <!--<i class="fas fa-unlink"></i>-->
-          R<sup>G</sup>
+        <a href="https://www.researchgate.net/profile/Thomas_Torsney-Weir" style="background: #0cb;">
+          <i class="fab fa-researchgate"></i>
+          <!--R<sup>G</sup>-->
+        </a>
+      </li>
+      <li>
+        <a href="https://orcid.org/0000-0002-0329-2198" style="background: #a6ce39;">
+          <i class="fab fa-orcid"></i>
         </a>
       </li>
     </ul>
