--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@ title: Home
       <img src="/images/headshot.jpg" />
     </div>
 
-    <h1>Swansea University</h1>
-    <h2>Computer Science</h2>
+    <h1>VRVis Research Center</h1>
+    <h2>Biomedical imaging group</h2>
 
     <ul class="address">
-      <li>Office 416</li>
-      <li>Computational Foundry</li>
-      <li>Swansea University --- Bay Campus</li>
-      <li>Swansea</li>
-      <li>SA1 8EN</li>
-      <li>UK</li>
+      <li>VRVis Zentrum für Virtual Reality und Visualisierung Forschungs-GmbH</li>
+      <li>Donau-City-Strasse 11</li>
+      <li>1220 Vienna</li>
+      <li>Austria</li>
     </ul>
 
     <ul class="social-links">
       <li>
-        <a href="mailto:t.d.torsney-weir@swansea.ac.uk" 
+        <a href="mailto:torsney-weir@vrvis.at" 
            style="background: #f67f00;">
           <i class="far fa-envelope"></i>
         </a>
@@ -38,12 +36,6 @@ title: Home
         </a>
       </li>
       <li>
-        <a href="https://www.researchgate.net/profile/Thomas_Torsney-Weir" style="background: #0cb;">
-          <i class="fab fa-researchgate"></i>
-          <!--R<sup>G</sup>-->
-        </a>
-      </li>
-      <li>
         <a href="https://orcid.org/0000-0002-0329-2198" style="background: #a6ce39;">
           <i class="fab fa-orcid"></i>
         </a>
@@ -56,7 +48,7 @@ title: Home
     <h2>Welcome</h2>
 
     <p>
-      I am currently a Lecturer at Swansea University.
+      I am currently a Researcher at VRVis research center in Vienna, Austria.
       My primary research interest is
       using visualization to understand multi-dimensional spaces. I also
       dabble in machine learning and functional programming. I am particularly
