--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ title: Home
       <img src="/images/headshot.jpg" />
     </div>
 
+    <!--
     <h1>VRVis Research Center</h1>
     <h2>Biomedical imaging group</h2>
 
@@ -17,10 +18,11 @@ title: Home
       <li>1220 Vienna</li>
       <li>Austria</li>
     </ul>
+    -->
 
     <ul class="social-links">
       <li>
-        <a href="mailto:torsney-weir@vrvis.at" 
+        <a href="mailto:torsneyt@gmail.com" 
            style="background: #f67f00;">
           <i class="far fa-envelope"></i>
         </a>
@@ -48,10 +50,13 @@ title: Home
     <h2>Welcome</h2>
 
     <p>
-      I am currently a Researcher at VRVis research center in Vienna, Austria.
-      My primary research interest is
-      using visualization to understand multi-dimensional spaces. I also
-      dabble in machine learning and functional programming. I am particularly
+      Recovering academic and 
+      software engineer with extensive experience building systems from the ground
+      up as well as research in ML/AI with a focus on 
+      visual analysis in 
+      multi-dimensional continuous spaces and understanding complex models.
+       I also
+      dabble in functional programming. I am particularly
       a fan of the <a href="https://www.haskell.org">Haskell</a> and 
       <a href="http://www.purescript.org">Purescript</a> languages.
     </p>
