--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ title: Home
       create better software more easily.
       I am particularly
       a fan of the <a href="https://www.haskell.org">Haskell</a> and 
-      <a href="http://www.purescript.org">Purescript</a> languages.
+      <a href="http://www.purescript.org">PureScript</a> languages.
     </p>
 
     <h2>News</h2>
